--- a/resource-room/index.html
+++ b/resource-room/index.html
@@ -1,6 +1,6 @@
 ---
 layout: resources
-title: Resource Room
-file_url: /resource-room/
-breadcrumb: Resource Room
+title: Breakout Tracks
+file_url: /breakout-tracks/
+breadcrumb: Breakout Tracks
 ---
