--- a/resource-room/index.html
+++ b/resource-room/index.html
@@ -1,6 +1,6 @@
 ---
 layout: resources
 title: Breakout Tracks
-file_url: /breakout-tracks/
+file_url: /resource-room/
 breadcrumb: Breakout Tracks
 ---
