--- a/resource-room/subcategory-A/index.html
+++ b/resource-room/subcategory-A/index.html
@@ -1,6 +1,6 @@
 ---
 layout: resources-alt
-title: Resource Room
+title: Breakout Tracks
 permalink: /resource-room/subcategory-A/
 breadcrumb: Track 3
 ---
