--- a/resource-room/subcategory-C/index.html
+++ b/resource-room/subcategory-C/index.html
@@ -1,6 +1,6 @@
 ---
 layout: resources-alt
 title: Breakout Tracks
-permalink: /resource-room/subcategory-C/
+permalink: /breakout/track-1/
 breadcrumb: Track 1
 ---
