--- a/resource-room/subcategory-B/index.html
+++ b/resource-room/subcategory-B/index.html
@@ -1,6 +1,6 @@
 ---
 layout: resources-alt
 title: Breakout Tracks
-permalink: /resource-room/subcategory-B/
+permalink: /breakout/track-2/
 breadcrumb: Track 2
 ---
