--- a/resource-room/subcategory-A/index.html
+++ b/resource-room/subcategory-A/index.html
@@ -1,6 +1,6 @@
 ---
 layout: resources-alt
 title: Breakout Tracks
-permalink: /resource-room/subcategory-A/
+permalink: /breakout/track-3/
 breadcrumb: Track 3
 ---
