--- a/resource-room/subcategory-A/index.html
+++ b/resource-room/subcategory-A/index.html
@@ -1,6 +1,6 @@
 ---
 layout: resources-alt
 title: Breakout Tracks
-permalink: /breakout/track-3/
+permalink: https://www.tech.gov.sg/media/technews/the-crux-of-the-matter-a-pleasant-user-experience
 breadcrumb: Track 3
 ---
