--- a/resource-room/subcategory-C/index.html
+++ b/resource-room/subcategory-C/index.html
@@ -1,6 +1,6 @@
 ---
 layout: resources-alt
 title: Breakout Tracks
-permalink: /breakout/track-1/
+permalink: https://www.tech.gov.sg/media/technews/ux-research-bringing-the-voice-of-the-customer-into-the-boardroom
 breadcrumb: Track 1
 ---
